--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">BakingApp</string>
     <string name="Rasgulla">RASGULLA</string>
     <string name="ingredients_head">Ingredients</string>
+    <string name="POSITION_KEY">position</string>
+    <string name="LIST_KEY">arrayList</string>
+    <string name="please_wait">Please Wait...</string>
 </resources>
